--- a/README
+++ b/README
@@ -6,3 +6,6 @@ Workaround by sending extra CR-LF before exit to flush buffer.
 BUG #002 : Router prompt matching "Device#" in "show version" on Cisco 2900/3900 series routers.
 Need to adjust router prompt to exclude this somehow. Does not impact the output too much as the buffer
 will be flushed anyway due to BUG #001.
+
+BUG #003 : Prompt not working for Arista devices. Set TERM to vt100 to disable escape characters being
+sent by Arista devices attempting to change xterm title.
