--- a/README
+++ b/README
@@ -1,11 +1,10 @@
 
 BUG #001 : Sometimes buffer at the end (just before exit command) is not shown/logged.
 Seen mostly with Cisco ASA FW (getting SSH broken pipe after exit command???).
-Workaround by sending extra CR-LF before exit to flush buffer.
+FIXED: Send extra CR-LF before exit to flush buffer.
 
 BUG #002 : Router prompt matching "Device#" in "show version" on Cisco 2900/3900 series routers.
-Need to adjust router prompt to exclude this somehow. Does not impact the output too much as the buffer
-will be flushed anyway due to BUG #001.
+Need to adjust router prompt to exclude this somehow.
 
-BUG #003 : Prompt not working for Arista devices. Set TERM to vt100 to disable escape characters being
-sent by Arista devices attempting to change xterm title.
+BUG #003 : Prompt not working for Arista devices.
+FIXED: Set TERM to vt100 to disable escape characters being sent by Arista devices attempting to change xterm title.
